<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Resume</string>
    <string name="action_settings">Settings</string>
    <string name="mainlabel">Main</string>
    <string name="hello_world">Hello world!</string>
     <string name="seemore">see more ></string>

    <!--       Profile details       -->

    <string name="fullname">John Ariel H. Lomboy</string>
    <string name="address">Lower Mohon Talisay City</string>
    <string name="dob">February 27, 1990</string>
    <string name="namelabel">Name :</string>
    <string name="addresslabel">Address :</string>
    <string name="doblabel">Date of Birth :</string>
    <string name="emaillabel">E-mail address :</string>
    <string name="email">lombeemii@yahoo.com</string>
    <string name="phonelabel">Cellphone # :</string>
    <string name="phone">09428093339</string>

    <!--       Profile details       -->


    <!--       About details       -->
    <string name="clickblocks">Click blocks to retrieve info</string>

    <!-- About.Traits details -->
    <string name="t0">Traits</string>
    <string name="t1">- Adventurous</string>
    <string name="t2">- Hospitable</string>
    <string name="t3">- Outgoing</string>
    <string name="t4">- Resourceful</string>

    <!-- About.Sports details -->
    <string name="soccer">Soccer Football</string>
    <string name="badminton">Badminton</string>
    <string name="basketball">Basketball</string>

    <!-- About.Education details -->
    <string name="gslabel">Elementary Education</string>
    <string name="hslabel">Secondary Education</string>
    <string name="collegelabel">Collegiate</string>
    <string name="gs">Colegio del Santo Ninño</string>
    <string name="year1">2003</string>
    <string name="hs">University of San Jose - Recoletos</string>
    <string name="year2">2007</string>
    <string name="school">University of San Jose - Recoletos</string>
    <string name="course">Information Technology</string>
    <string name="year">Present</string>

    <!-- About.Accomplishments details -->
    <string name="acclabel">Accomplishments</string>
    <string name="acc1">- Made a Tower Defense flash game for our IT Project.</string>
    <string name="acc2">- Made various flash games for others IT Project.</string>
    <string name="acc3">- Learned various programming languages. View "Skills" for more info.</string>

    <!-- About.Work details -->
    <!-- About.Work.creweb details -->
    <string name="creweb">Creweb Design</string>
    <string name="crewebdesc">Develop php/wordpress projects.</string>
    <string name="crewebtime">April 2009 - June 2009</string>
    <string name="crewebposition">Web Developer</string>
    <!-- About.Work.WorkFromHome details -->
    <string name="wfh">Work from Home</string>
    <string name="wfhtime">September 2011</string>
    <string name="wfhposition">Flash Game Developer</string>
    <string name="wfh1name">Ninjump</string>
    <string name="wfh1description">Based from an android app game "Ninjump" converted into flash.</string>
    <string name="wfh2name">Space Sprint</string>
    <string name="wfh2description">A 2d interfaced flash game focusing on an astronaut flying around moon for fun.</string>
    <string name="wfh3name">College Life</string>
    <string name="wfh3description">A pokemon themed flash game that aims to achieve stat growth for a graduation requirement.</string>
    <string name="wfh4name">All About School</string>
    <string name="wfh4description">A flash game for kids. Just click this and that and your finish.</string>
    <string name="wfh5name">Piggy Woodland Adventure</string>
    <string name="wfh5description">Accompany piggy, a cart made out of pig, as he travels back to his farm from where he is lost.</string>

    <!-- About.Reference -->
    <string name="cerio">Cerio, Francis Sergio A. </string>
    <string name="mesael">Medallo, Mesael I. </string>
    <string name="geno">Cortes, Geno</string>
    <string name="cebu">Cebu City</string>
    <string name="talisay">Talisay City</string>
    <string name="ceriocontact">09331701158</string>
    <string name="mesaelcontact">09321472550</string>
    <string name="genocontact">09322427835</string>
    <string name="ceriojob">Android Developer, NextIX</string>
    <string name="mesaeljob">Web Developer, Irender Animation Inc. </string>
    <string name="genojob">Junior Software Developer, Talleco </string>
    <string name="mesaelemail">mesaelmedallo@yahoo.com</string>
    <string name="cerioemail">fran.cerio@gmail.com</string>
    <string name="genoemail">unknown</string>

    <!-- About.Hobbies details -->
    <string name="hobbies">Hobbies</string>
    <string name="games">Playing offline/online games</string>
    <string name="watch1">Watching animes</string>
    <string name="watch2">Watching movies</string>
    <string name="watch3">Watching series</string>
    <string name="watch4">Sleeping</string>

    <!-- About.Interests details -->
    <string name="interests">Interests</string>
    <string name="natgeo">National Geographic</string>
    <string name="discch">Discovery Channel</string>

    <!--       About details       -->

</resources>