<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgdialog"
    android:orientation="vertical" >

    <LinearLayout
        style="@style/WrapMargin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            style="@style/Wrap.Head"
            android:text="@string/gslabel" />

        <TextView
            style="@style/Wrap.Sub"
            android:text="@string/gs"/>

        <TextView
            style="@style/Wrap.SubSub"
            android:text="@string/year1" />

        <View
            android:id="@+id/sep1"
            style="@style/SeperatorAbout" />

        <TextView
            style="@style/Wrap.Head"
            android:text="@string/hslabel"/>

        <TextView
            style="@style/Wrap.Sub"
            android:text="@string/hs"/>

        <TextView
            style="@style/Wrap.SubSub"
            android:text="@string/year2" />

        <View
            android:id="@+id/sep1"
            style="@style/SeperatorAbout" />

        <TextView
            style="@style/Wrap.Head"
            android:text="@string/collegelabel"/>

        <TextView
            style="@style/Wrap.Sub"
            android:text="@string/school" />

        <TextView
            style="@style/Wrap.Sub"
            android:text="@string/course" />

        <TextView
            style="@style/Wrap.SubSub"
            android:text="@string/year" />
    </LinearLayout>

</LinearLayout>