<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingTop="30dp" >

    <ImageView
        android:id="@+id/iv"
        style="@style/Wrap.Image"
        android:background="@drawable/unknown" />

    <!-- #### Seperator ####-->
    
    <View
        android:id="@+id/div1"
        style="@style/SeperatorAbout"
        android:layout_below="@+id/iv" />
    
    <!-- #### Details ####-->

    <TextView
        android:id="@+id/email"
        style="@style/Wrap.Sub"
        android:layout_below="@+id/div1"
        android:layout_marginTop="10dp"
        android:text="@string/emaillabel" />

    <TextView
        android:id="@+id/txtemail"
        style="@style/Wrap.Head"
        android:layout_below="@+id/email"
        android:text="@string/email" />

    <TextView
        android:id="@+id/phone"
        style="@style/Wrap.Sub"
        android:layout_below="@+id/txtemail"
        android:layout_marginTop="10dp"
        android:text="@string/phonelabel" />

    <TextView
        android:id="@+id/txtphone"
        style="@style/Wrap.Head"
        android:layout_below="@+id/phone"
        android:text="@string/phone" />

</RelativeLayout>